@@ -1,6 +1,7 @@
 Changes in Version 0.13.2
   o Fixed a bug in 'intersectionmodel' not properly clearing removed parameters
   o Improved starting values for identity model in partialprune
+  0 Fixed a bug in partialprune resulting in an uninformative error
 
 Changes in Version 0.13.1
   o Bootstrapping now occurs before standardizing the data (thanks to Yiwei Yang and Amanda Montoya)
